completely got rid of JavaGAT in Zorilla. Probably broken now :-)